# Hypershock

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
Hypershock/src/: CMakeLists.txt  Hypershock.hpp
Hypershock/src/Hypershock/Core/: Application.cpp  Application.hpp  CMakeLists.txt  Compiler.hpp  Core.hpp  EntryPoint.hpp  Error.hpp  Monitor.cpp  Monitor.hpp  Platform.hpp  Types.cpp  Types.hpp  Utilities.hpp  Window.cpp  Window.hpp
Hypershock/src/Hypershock/Core/Memory/: CMakeLists.txt  Cast.hpp  Function.hpp  SharedPtr.hpp  UniquePtr.hpp  WeakPtr.hpp
Hypershock/src/Hypershock/Core/Object/: CMakeLists.txt  Class.cpp  Class.hpp  Object.cpp  Object.hpp
Hypershock/src/Hypershock/Core/String/: CMakeLists.txt  String.cpp  String.hpp
Hypershock/src/Hypershock/Core/Time/: CMakeLists.txt  DateTime.cpp  DateTime.hpp  Timespan.cpp  Timespan.hpp
Hypershock/src/Hypershock/DataStructures/: CMakeLists.txt  IDTree.hpp
Hypershock/src/Hypershock/Event/: ApplicationEvent.hpp  CMakeLists.txt  Event.hpp  EventCore.hpp  KeyboardEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Hypershock/src/Hypershock/Math/: CMakeLists.txt  Math.cpp  Math.hpp
Hypershock/src/Hypershock/Math/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp
Hypershock/src/Hypershock/Math/Quaternion/: CMakeLists.txt  Quaternion.cpp  Quaternion.hpp
Hypershock/src/Hypershock/Math/Vector/: CMakeLists.txt  Vector.cpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
