cmake_minimum_required(VERSION 3.20.0)

set(HYPERSHOCK_VERSION 0.1)

project(HYPERSHOCK VERSION ${HYPERSHOCK_VERSION})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# add subdirectories
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HYPERSHOCK/src")

# set sources
set(HYPERSHOCK_FILES
		${HYPERSHOCK_SOURCES}
		${HYPERSHOCK_HEADERS}
		CACHE INTERNAL "" FORCE)


if(DEFINED HYPERSHOCK_BUILD_TYPE)
	set(HYPERSHOCK_BUILD_TYPE
			${HYPERSHOCK_BUILD_TYPE}
			CACHE INTERNAL "" FORCE)
else()
	set(HYPERSHOCK_BUILD_TYPE
			"SHARED"
			CACHE INTERNAL "" FORCE)
endif()

if(HYPERSHOCK_BUILD_TYPE STREQUAL "STATIC")
	message(STATUS "HYPERSHOCK: Build type detected: ${GGEZ_BUILD_TYPE}")
elseif(HYPERSHOCK_BUILD_TYPE STREQUAL "SHARED")
	message(STATUS "HYPERSHOCK: Build type detected: ${GGEZ_BUILD_TYPE}")
else()
	message(FATAL_ERROR "HYPERSHOCK: Build type detected: ${GGEZ_BUILD_TYPE}")
endif()


add_library(HYPERSHOCK ${HYPERSHOCK_BUILD_TYPE} ${HYPERSHOCK_FILES})

target_include_directories(HYPERSHOCK PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/HYPERSHOCK/src")


if(HYPERSHOCK_BUILD_TYPE STREQUAL "STATIC")
	target_compile_definitions(HYPERSHOCK PUBLIC HYPERSHOCK_BUILD_STATIC)
elseif(HYPERSHOCK_BUILD_TYPE STREQUAL "SHARED")
	target_compile_definitions(HYPERSHOCK PUBLIC HYPERSHOCK_BUILD_SHARED)
	target_compile_definitions(HYPERSHOCK PRIVATE HYPERSHOCK_EXPORT)
endif()